<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".activities.CreatePasswordActivity">

    <TextView
        android:id="@+id/textViewSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#1A6FEE"/>

    <TextView
        android:id="@+id/titleTextCreatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/textViewSkip"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/subTitleCreatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitleCreatePassword"
        android:layout_below="@id/titleTextCreatePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:id="@+id/pinCodeRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTitleCreatePassword"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/oneCirclePinCode"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/shape_disable_circle_pin_code"
            android:layout_marginEnd="10dp"/>
        <RelativeLayout
            android:id="@+id/twoCirclePinCode"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/shape_disable_circle_pin_code"
            android:layout_toEndOf="@id/oneCirclePinCode"
            android:layout_marginEnd="10dp"/>
        <RelativeLayout
            android:id="@+id/threeCirclePinCode"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/shape_disable_circle_pin_code"
            android:layout_toEndOf="@id/twoCirclePinCode"
            android:layout_marginEnd="10dp"/>
        <RelativeLayout
            android:id="@+id/fourCirclePinCode"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/shape_disable_circle_pin_code"
            android:layout_toEndOf="@id/threeCirclePinCode"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberFieldOneRowRL"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/pinCodeRelativeLayout"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btnOneNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:text="@string/_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">
        </Button>
        <Button
            android:id="@+id/btnTwoNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnOneNumber"
            android:text="@string/_2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btnThreeNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnTwoNumber"
            android:text="@string/_3"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberFieldTwoRowRL"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/numberFieldOneRowRL"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btnFourNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:text="@string/_4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
        <Button
            android:id="@+id/btnFiveNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnFourNumber"
            android:text="@string/_5"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btnSixNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnFiveNumber"
            android:text="@string/_6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberFieldThreeRowRL"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_below="@id/numberFieldTwoRowRL"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btnSevenNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:text="@string/_7"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">
        </Button>
        <Button
            android:id="@+id/btnEightNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnSevenNumber"
            android:text="@string/_8"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btnNineNumber"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ripple_btn_pin_code"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnEightNumber"
            android:text="@string/_9"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">
        </Button>
    </RelativeLayout>

    <Button
        android:id="@+id/btnZeroNumber"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ripple_btn_pin_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/numberFieldThreeRowRL"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textStyle="bold">
    </Button>
    <ImageButton
        android:id="@+id/deleteNumberCretePassword"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ico_delete_create_password_128"
        android:background="@drawable/ripple_btn_delete_pin_code"
        android:layout_toEndOf="@id/btnZeroNumber"
        android:layout_below="@id/numberFieldThreeRowRL"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"/>
</RelativeLayout>